changing width of container to avoid overflow

--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,6 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
-  max-width: 100vw;
 }
 .header {
   width: 100%;
